# comfyui-lmstudio-prompt-enhancer

./: .gitignore  README.md  __init__.py  example_Flux2Dev_system_prompt.txt  example_QwenImage_system_prompt.txt  example_SDXL_system_prompt.txt  lmstudio_prompt_enhancer.py  pyproject.toml
Example_System_Prompts/: example_Flux1Dev_system_prompt.txt  example_Flux2Klein_system_prompt.txt  example_Pony_system_prompt.txt  example_SDXL_system_prompt.txt
Workflows/Flux2/: Flux2-Klein-9B_Image Edit_LMStudio-Prompt-Enhancer_ llama-3.2-3b-imagegen.json  Flux2-Klein-9B_Image Edit_LMStudio-Prompt-Enhancer_ mistral-7b-instruct-v0.3.json  Flux2-Klein-9B_Image Edit_LMStudio-Prompt-Enhancer_ mistral-large-instruct-2411.json  Flux2-Klein-9B_Image Edit_LMStudio-Prompt-Enhancer_gemma-4-12b-qat.json  Flux2-Klein-9B_Image Edit_LMStudio-Prompt-Enhancer_gemma2-instruct.json
Workflows/SDXL/: SDXL_LMStudio-Prompt-Enhancer_gemma-4-12b-qat.json  SDXL_LMStudio-Prompt-Enhancer_gemma2-instruct.json  SDXL_LMStudio-Prompt-Enhancer_llama-3.2-3b-imagegen.json  SDXL_LMStudio-Prompt-Enhancer_mistral-7b-instruct-v0.3.json  SDXL_LMStudio-Prompt-Enhancer_mistral-large-instruct-2411.json
